validation error done

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "joi": "^17.3.0",
     "mongoose": "^5.10.9",
     "nodemon": "^2.0.4"
   }
