--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
   "dependencies": {
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-winston": "^4.0.5",
     "joi": "^17.3.0",
     "mongoose": "^5.10.9",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0",
+    "winston-mongodb": "5.0.5",
+    "winston-elasticsearch": "0.10.0"
   }
 }
