--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -r esm index.js",
+    "start": "nodemon -r esm server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -13,15 +13,19 @@
   "author": "shahid",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-winston": "^4.0.5",
+    "jest": "^26.6.3",
     "joi": "^17.3.0",
     "mongoose": "^5.10.9",
     "nodemon": "^2.0.4",
+    "supertest": "^6.0.1",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0",
-    "winston-mongodb": "5.0.5",
-    "winston-elasticsearch": "0.10.0"
+    "winston-elasticsearch": "0.10.0",
+    "winston-mongodb": "5.0.5"
   }
 }
